--- a/Прогр2/Прогр2/Прогр2.csproj
+++ b/Прогр2/Прогр2/Прогр2.csproj
@@ -47,6 +47,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Animal.cs" />
+    <Compile Include="Aquarium.cs" />
+    <Compile Include="ClassArray.cs" />
+    <Compile Include="FAquarium.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FAquarium.Designer.cs">
+      <DependentUpon>FAquarium.cs</DependentUpon>
+    </Compile>
     <Compile Include="Fish.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -58,6 +66,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shark.cs" />
     <Compile Include="TigerShark.cs" />
+    <EmbeddedResource Include="FAquarium.resx">
+      <DependentUpon>FAquarium.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
