--- a/Прогр2/Прогр2/Прогр2.csproj
+++ b/Прогр2/Прогр2/Прогр2.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FSelectColor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FSelectColor.Designer.cs">
+      <DependentUpon>FSelectColor.cs</DependentUpon>
+    </Compile>
     <Compile Include="IAnimal.cs" />
     <Compile Include="Aquarium.cs" />
     <Compile Include="ClassArray.cs" />
@@ -71,6 +77,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FSelectColor.resx">
+      <DependentUpon>FSelectColor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
